--- a/intro/high-level.tex
+++ b/intro/high-level.tex
@@ -35,7 +35,7 @@ Our scheme builds on top of the ring signature of Chandran et al.~and improves t
 Our proof consists of two set-membership proofs in sets of size $n^{2/3}$ --- i.e.~each proof is of size $\Theta(\sqrt[3]{n})$ ---  plus $\Theta(\sqrt[3]{n})$ Groth-Sahai proofs and Groth-Sahai commitments.
 We enlarge user's verification keys the by including $[\vecb{a}]_1,[\vecb{a}]_2$, where $\vecb{a}\gets\mathcal{Q}$, and $[\vecb{a}vk]_2=\vecb{a}[vk]_2$, where $[vk]_2$ is the verification key of a Boneh-Boyen signature. Thereby, verification key of the $i$ th user is of the form $\vecb{vk}_i:=([vk_i]_2,[\vecb{a}]_1,[\vecb{a}]_2,[\vecb{a}_ivk_i]_2)$. In spite of these differences with Chandran et al.'s verification key, our proof also shows that the opening of a Groth-Sahai commitment is a Boneh-Boyen verification key $[vk_i]_2$ and belongs to $\{[vk_1]_2,\ldots,[vk_n]_2\}$.
 
-Our first step is to arrange the verification keys in $n^{2/3}$ blocks of size $m=\sqrt[3]{n}$. To do so we coin the following notation: for a sequence $\{s\}_{1\leq i \leq n}$ define $s_{\mu,\nu}:=s_{(\mu-1)m+\nu}$, where  $1\leq\mu\leq n^{2/3},1\leq \nu\leq m$.  The prover and the verifier arrange the elements of the verification keys into $[\vecb{\kappa}_1]_2,\ldots, [\vecb{\kappa}_{n^{2/3}}]_2$, $A_1,\ldots, A_{n^{2/3}}$, and $[\matr{A}_1]_1,\ldots, [\matr{A}_{n^{2/3}}]_1$ such that $[\vecb{\kappa}_i]_2:= ([vk_{i,1}]_2,\ldots,[vk_{i,m}]_2)^\top\in\GG^m, A_i:=\{[\vecb{a}_{i,1}]_1,\ldots,[\vecb{a}_{i,m}]_1\}\in Q_m$ and $[\matr{A}_i]_1=[\vecb{a}_{i,1}\cat\cdots\cat\vecb{a}_{i,m}]_1\in\GG^{2\times m}$. They also define the sets
+Our first step is to arrange the verification keys in $n^{2/3}$ blocks of size $m=\sqrt[3]{n}$. To do so we coin the following notation: for a sequence $\{s\}_{1\leq i \leq n}$ define $s_{\mu,\nu}:=s_{(\mu-1)m+\nu}$, where  $1\leq\mu\leq n^{2/3},1\leq \nu\leq m$.  The prover and the verifier arrange the elements of the verification keys into $[\vecb{\kappa}_1]_2,\ldots, [\vecb{\kappa}_{n^{2/3}}]_2$, $A_1,\ldots, A_{n^{2/3}}$, and $[\matr{A}_1]_1,\ldots, [\matr{A}_{n^{2/3}}]_1$ such that $[\vecb{\kappa}_i]_2:= ([vk_{i,1}]_2,\ldots,[vk_{i,m}]_2)^\top\in\GG^m_2, A_i:=\{[\vecb{a}_{i,1}]_1,\ldots,[\vecb{a}_{i,m}]_1\}\in Q_m$ and $[\matr{A}_i]_1=[\vecb{a}_{i,1}\cat\cdots\cat\vecb{a}_{i,m}]_1\in\GG^{2\times m}_1$. They also define the sets
 \begin{align*}
 &H:=\{h(A_1),\ldots,\allowbreak h(A_{n^{2/3}})\}\\
 &G:=\{g_{[\matr{A}_1]_1}([\vecb{\kappa}_1]_2),\allowbreak\ldots,g_{[\matr{A}_{n^{2/3}}]_1}([\vecb{\kappa}_{n^{2/3}}]_2)\},
@@ -47,4 +47,4 @@ The prover commits to each element of $A'=A_\mu$ such that the first committed e
 
 Next, the prover computes Groth-Sahai commitments to each element of the vector $[\vecb{\kappa}']_2$, whose first element is $[vk_\alpha]_2$ and the rest are the other verification keys in $[\vecb{\kappa}_\mu]_2$ (preserving the order), and commits also to $g_{[\matr{A_{\mu'}}]_1}([\vecb{\kappa}_{\mu'}]_2)$, where $\mu'=\mu$. The second set-membership proof shows that $g_{[\matr{A_{\mu'}}]_1}([\vecb{\kappa}_{\mu'}]_2)\in G$ and that $\mu'=\mu$. Finally, the prover gives a Groth-Sahai proof that $g_{[\matr{A}']_1}([\vecb{\kappa}']_2)=g_{[\matr{A_{\mu'}}]_1}([\vecb{\kappa}_{\mu'}]_2)$.
 
-Since $A'=A_\mu$, we conclude that $[\vecb{\kappa}']_1$ is a permutation of $[\vecb{\kappa}_\mu]_1$ and thus $[\kappa'_1]_2=[vk_\alpha]_2$ is in the ring of verification keys.
+Since $A'=A_\mu$, Lemma \ref{lemma:hg} implies that $[\vecb{\kappa}']_1$ is a permutation of $[\vecb{\kappa}_\mu]_1$ and thus $[\kappa'_1]_2=[vk_\alpha]_2$ is in the ring of verification keys.
