--- a/intro/table-eff.tex
+++ b/intro/table-eff.tex
@@ -9,12 +9,9 @@
 %\hline
                                            & Chandran et al.~\cite{ICALP:ChaGroSah07} & This work \\
 \hline%\hline
-\rule{0pt}{2.5ex}CRS size  $\GG_1$              & $4$                                       & $4$       \\
-\rule{0pt}{2.5ex}CRS size     $\GG_2$    & $4$                                       & $4$       \\ 
-\rule{0pt}{2.5ex}Verification key size $\GG_1$    & $1$                                       & $2$       \\
-\rule{0pt}{2.5ex}Verification key size  $\GG_2$   & $0$                                       & $5$       \\
-\rule{0pt}{2.5ex}Signature size      $\GG_1$      & $12\sqrt{n}+10$                        & $24\sqrt[3]{n} + 36$\\
-\rule{0pt}{2.5ex}Signature size      $\GG_2$      & $15\sqrt{n}+8$                        & $34\sqrt[3]{n} + 24$\\       
+\rule{0pt}{2.5ex}CRS size  $\GG_1/\GG_2$              & 4/4                                      & $4/4$       \\
+\rule{0pt}{2.5ex}Verification key size $\GG_1/\GG_2$    & $1/0$                                       & $2/5$       \\
+\rule{0pt}{2.5ex}Signature size      $\GG_1/\GG_2$      & $12\sqrt{n}+10/15\sqrt{n}+8$                        & $24\sqrt[3]{n} + 36/34\sqrt[3]{n} + 24$\\
 \rule{0pt}{2.5ex}Signature generation time & $37\sqrt{n}+23$                        & $80\sqrt[3]{n}+71$\\
 \rule{0pt}{2.5ex}Verification time         & $2n + 60\sqrt{n}+38$                & $8n^{2/3} + 162\sqrt[3]{n} + 118$\\
 %\hline 
