--- a/intro/discussion.tex
+++ b/intro/discussion.tex
@@ -18,9 +18,9 @@ and then prove that it belong to $H$ using our set membership proof of size $\Th
 \subsubsection{Erasures.}
 In the security proof we need to embed a random preimage $A=\{\vecb{a}_1,\ldots,\allowbreak \vecb{a}_{q_{\mathsf{gen}}}\}$ of $h$ in the verification keys, where $q_{\mathsf{gen}}$ is the total number of verification keys. On the other hand, the adversary may adaptively corrupt parties obtaining all the random coins used to generate the verification key. That is, we need to reveal $\log_{\cP_S} \vecb{a}_i$ (the discrete logs of $\vecb{a}_i$) to the adversary, which is incompatible with the permutation pairing assumption and thus with the security of $h$. Since is not clear how to obliviously sample $(a_i\cP,a^2_i\cP)$ and we can only guess the set of corrupted parties with negligible probability, we are forced to use erasures: after sampling $a_i$ and computing $\vecb{a}_i$, the key generation algorithm erases $a_i$ and $a_i^2$.
 
-\subsubsection{Getting rid of the Permutation Pairing Assumption.} Gonzalez et al.~\cite{ACNS:GonRaf16} modify Groth and Lu's proof of correctness of a shuffle \cite{AC:GroLu07} to get rid of the permutation pairing assumption. They showed that the statement ``I know two vectors of group elements $(\vecb{a}_1,\ldots,\vecb{a}_m),(\vecb{a}'_1,\ldots,\vecb{a}'_m)$ which are equal up to a permutation'' can be showed with $m$ set membership proofs that $\vecb{a}'_1,\dots\vecb{a}'_m\in\{\vecb{a},\ldots,\vecb{a}_m\}$ and  a proof that$\sum_{i=1}^m \vecb{a}'_i=\sum_{i=1}^m \vecb{a}_i$.  Gonzalez et al.~construct a $\Theta(m)$ proof of the first statement under standard assumptions (DLin in symmetric groups), while the second statement can be proved using standard techniques.
+%\subsubsection{Getting rid of the Permutation Pairing Assumption.} Gonzalez et al.~\cite{ACNS:GonRaf16} modify Groth and Lu's proof of correctness of a shuffle \cite{AC:GroLu07} to get rid of the permutation pairing assumption. They showed that the statement ``I know two vectors of group elements $(\vecb{a}_1,\ldots,\vecb{a}_m),(\vecb{a}'_1,\ldots,\vecb{a}'_m)$ which are equal up to a permutation'' can be showed with $m$ set membership proofs that $\vecb{a}'_1,\dots\vecb{a}'_m\in\{\vecb{a},\ldots,\vecb{a}_m\}$ and  a proof that$\sum_{i=1}^m \vecb{a}'_i=\sum_{i=1}^m \vecb{a}_i$.  Gonzalez et al.~construct a $\Theta(m)$ proof of the first statement under standard assumptions (DLin in symmetric groups), while the second statement can be proved using standard techniques.
 
-If we use Gonzalez et al.'s techniques we would have to show that for all $\vecb{a}'\in A',$ $\vecb{a}'\in A_ \mu$. However, we can't do this since $A_\mu$ is unknown to the verifier. Instead, it seems that we are using stronger properties of the permutation pairing assumption. We use $h(A_\mu)$ as a constant-size computationally binding commitment of the set $A_\mu$, i.e.~invariant under permutations of the input, which is also structure preserving, i.e.~$A_\mu\subset\GG^2_1$ and $h(A_\mu)\in\GG_1$. It is an interesting open problem to construct $h$ from standard assumptions (e.g.~DDH, DLin).
+%If we use Gonzalez et al.'s techniques we would have to show that for all $\vecb{a}'\in A',$ $\vecb{a}'\in A_ \mu$. However, we can't do this since $A_\mu$ is unknown to the verifier. Instead, it seems that we are using stronger properties of the permutation pairing assumption. We use $h(A_\mu)$ as a constant-size computationally binding commitment of the set $A_\mu$, i.e.~invariant under permutations of the input, which is also structure preserving, i.e.~$A_\mu\subset\GG^2_1$ and $h(A_\mu)\in\GG_1$. It is an interesting open problem to construct $h$ from standard assumptions (e.g.~DDH, DLin).
 
 \subsubsection{Relation to \cite{AC:GonHevRaf15}.}
 Our construction is similar to the set membership proof of Gonzalez et al.~{\cite[Appendix D.2]{AC:GonHevRaf15}. However, the proof system from \cite{AC:GonHevRaf15} does not suffice for constructing a ring signature because there the CRS is fixed to a specific set and thus, the resulting ring signature will be fixed to a specific ring. 
