--- a/main-ring-signature.tex.tex
+++ b/main-ring-signature.tex.tex
@@ -138,7 +138,7 @@
         	 \input{prelim/flawed}
 
 	\section{Efficiency Analysis}
-		In this section we calculate the proof size, in number of group elements, signer time, in number of exponentiations, and verifier time, in number of exponentiations, values which are shown in Table \ref{table:eff}. For simplicity, we ignore the influence of the one-time signature as it affects both schemes in the same way. Further, we note that one-time signatures can be constructed from symmetric-key primitives and thus, its costs are negligible in comparison to bilinear groups based primitives. We just remark that both schemes require a hash function $H:\mathcal{VK}_{\mathsf{ots}}\to\Z_q$, which hashes one-time verification keys into integers modulo $q$.
+		In this section we calculate the proof size, in number of group elements, signer time, in number of exponentiations, and verifier time, in number of exponetiations, values which are shown in Table \ref{table:eff}. For simplicity, we ignore the influece of the one-time signature as it affects both schemes in the same way. Further, we note that one-time signatures can be constructed from symmetric-key primitives and thus, its costs are negligible in comparision to bilinear groups based primitives. We just remark that both schemes require a hash function $H:\mathcal{VK}_{\mathsf{ots}}\to\Z_q$, which hashes one-time verification keys into intergers modulo $q$.
 		\subsection{Chandran et al.'s Ring Signature}
 			\input{appendix/chandran-eff}
 		\subsection{Our Ring Signature}
